feat: add filter to get pending and approved application
